--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,18 @@
 <resources>
     <string name="app_name">MyAPP</string>
-    <string name="str1">welcome</string>
+    <string name="str1">Hello</string>
     <string name="str3">begin</string>
-    <string name="str2">happy birthday</string>
+    <string name="str2">Temperature is:</string>
+    <string name="str4">Change it to Fahrenheit</string>
+    <string name="str5">+3 point</string>
+    <string name="str6">+2 point</string>
+    <string name="str7">+1 point</string>
+    <string name="str8">reset</string>
+    <string name="str9">0</string>
+    <string name="str10">Team A</string>
+    <string name="tips">input RMB</string>
+    <string name="dollar">DOLLAR</string>
+    <string name="euro">EURO</string>
+    <string name="won">WON</string>
+    <string name="config">CONFIG</string>
 </resources>
