--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="euro">EURO</string>
     <string name="won">WON</string>
     <string name="config">CONFIG</string>
+    <string name="open_list">Open_List</string>
 </resources>
