客户端接入投票页面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="won">WON</string>
     <string name="config">CONFIG</string>
     <string name="open_list">Open_List</string>
+    <string name="hello_world">欢迎使用！</string>
+    <string name="lab_approve">赞成</string>
+    <string name="lab_object">反对</string>
+    <string name="lab_abstain">弃权</string>
 </resources>
